# cas-evals

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/02-shared-contracts-and-corpus/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/quick/260612-sob-implement-deterministic-cas-reference-pr/: 260612-sob-PLAN.md  260612-sob-SUMMARY.md  260612-sob-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
benchmarks/reference-product/v0.1/: adversarial.json  golden.json
benchmarks/v0.1/: adversarial.json  golden.json
benchmarks/v0.2/: adversarial.json  golden.json
docs/: benchmark-report-v0.1.md  benchmark-report-v0.2.md  reference-product-integration.md
releases/v0.2.0/: adversarial-results.json  golden-results.json  manifest.json
schemas/: evaluation-result.schema.json  evaluation-suite.schema.json
scripts/: verify.ps1
src/cas_evals/: __init__.py  cli.py  contracts.py  evaluator.py  reference_product.py  release.py
tests/: test_contracts.py  test_corpus.py  test_evaluator.py  test_reference_product.py  test_release.py
