[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cas-evals"
version = "0.1.0"
description = "Reproducible evaluation framework for the Coding Autopilot System"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Coding Autopilot System" }]
dependencies = []

[project.scripts]
cas-evals = "cas_evals.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
